--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Logs
 logs
 *.log
+*.rar
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -23,3 +24,5 @@ dist-ssr
 *.sln
 *.sw?
 .vite
+.agent/
+release_v4/
